# dpstream

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile.server  README.md  RELEASE-NOTES-2025.1.0.md  SPRINT_PLAN.md  crates.js  deny.toml  docker-compose.yml  dpstream-server.service  help.html  ns.txt  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yml
.history/: sprint-1_20251007.md  sprint1_complete_20251007.md  sprint1_optimization_complete.md
docs/: DEPLOYMENT.md  DEVELOPMENT.md  sprint2-summary.md
docs/architecture/: system-overview.md
docs/research/: dolphin-analysis.md  moonlight-analysis.md
docs/scripts/: README.md  build-guide.md  tailscale-setup.md
dpstream_server/: all.html  index.html  macro.dpstream_error!.html  macro.dpstream_error.html  macro.error_report!.html  macro.error_report.html  sidebar-items.js
dpstream_server/emulator/: index.html  sidebar-items.js
dpstream_server/emulator/config/: index.html  sidebar-items.js  struct.AudioConfig.html  struct.ControlsConfig.html  struct.DolphinConfig.html  struct.GeneralConfig.html  struct.PlayerConfig.html  struct.VideoConfig.html
dpstream_server/emulator/process/: index.html  sidebar-items.js  struct.DolphinConfig.html  struct.DolphinManager.html
dpstream_server/error/: enum.DpstreamError.html  enum.EmulatorError.html  enum.ErrorSeverity.html  enum.InputError.html  enum.NetworkError.html  enum.StreamingError.html  enum.VpnError.html  index.html  sidebar-items.js  struct.ErrorReport.html  trait.ErrorContext.html  type.Result.html
dpstream_server/health/: enum.ServiceStatus.html  fn.run_health_monitoring.html  index.html  sidebar-items.js  struct.HealthCheck.html  struct.HealthMonitor.html  struct.HealthStatus.html  struct.ReadinessCheck.html  struct.ReadinessStatus.html
dpstream_server/input/: index.html  sidebar-items.js  struct.InputStats.html  struct.MoonlightInputPacket.html  struct.ServerInputManager.html  struct.TouchPoint.html
dpstream_server/input/dolphin/: index.html  sidebar-items.js  struct.AdapterStatus.html  struct.DolphinInputAdapter.html
dpstream_server/input/mapping/: enum.ConsoleType.html  index.html  sidebar-items.js  struct.CalibrationData.html  struct.ControllerMapping.html  struct.GameProfile.html  struct.MappingPresets.html
dpstream_server/input/processor/: enum.AnalogStick.html  enum.DolphinButton.html  enum.DolphinCommand.html  index.html  sidebar-items.js  struct.InputProcessor.html  struct.ProcessorStats.html
dpstream_server/network/: index.html  sidebar-items.js
dpstream_server/network/discovery/: index.html  sidebar-items.js  struct.DiscoveryService.html  struct.ServerInfo.html
dpstream_server/network/pairing/: index.html  sidebar-items.js  struct.PairingManager.html  struct.PairingRequest.html  struct.PairingResponse.html
dpstream_server/network/vpn/: index.html  sidebar-items.js  struct.MagicsockStatus.html  struct.TailscaleConfig.html  struct.TailscaleStatus.html  struct.VpnManager.html
dpstream_server/streaming/: index.html  sidebar-items.js
dpstream_server/streaming/error_recovery/: enum.CircuitBreakerState.html  enum.CorrelationStatus.html  enum.ErrorEventType.html  enum.ErrorSeverity.html  enum.ErrorType.html  enum.RecoveryResult.html  enum.UserImpactLevel.html  index.html  sidebar-items.js  static.ERROR_RECOVERY.html  struct.CircuitBreaker.html  struct.CircuitBreakerConfig.html  struct.CircuitBreakerMetrics.html  struct.DiskIOStats.html  struct.ErrorContext.html  struct.ErrorCorrelation.html  struct.ErrorEvent.html  struct.ErrorMetrics.html  struct.ErrorRecoveryConfig.html  struct.ErrorRecoveryStats.html  struct.ErrorRecoverySystem.html  struct.RecoveryAttempt.html  struct.SpanContext.html  struct.SystemContext.html  trait.RecoveryStrategy.html
dpstream_server/streaming/health_server/: index.html  sidebar-items.js  struct.HealthServer.html
dpstream_server/streaming/moonlight/: enum.AudioCodec.html  enum.InputEvent.html  enum.SessionState.html  index.html  sidebar-items.js  struct.AudioConfig.html  struct.AudioFrame.html  struct.AudioStream.html  struct.ClientCapabilities.html  struct.ControllerInput.html  struct.InputHandler.html  struct.MoonlightServer.html  struct.NegotiatedStreamConfig.html  struct.PerformanceMonitor.html  struct.ServerConfig.html  struct.ServerStats.html  struct.StreamConfig.html  struct.StreamStats.html  struct.StreamingSession.html  struct.VideoFrame.html  struct.VideoStream.html
dpstream_server/streaming/sunshine/: index.html  sidebar-items.js  struct.ClientInfo.html  struct.DolphinStreamHost.html  struct.StreamConfig.html  struct.StreamStats.html
k8s/: namespace.yaml  server-deployment.yaml
monitoring/: alert_rules.yml  prometheus.yml
scripts/: build.sh  ci-cd.sh  dev-automation.sh  git-workflow.sh  optimize.sh  setup-dev.sh  test-network.sh  test.sh
search.desc/dpstream_server/: dpstream_server-desc-0-.js
server/: Cargo.toml  Cargo.toml.optimized
server/benches/: performance_bench.rs
server/src/: error.rs  health.rs  lib.rs  main.rs
server/src/emulator/: config.rs  mod.rs  process.rs
server/src/input/: dolphin.rs  mapping.rs  mod.rs  processor.rs
server/src/network/: discovery.rs  mod.rs  pairing.rs  vpn.rs
server/src/streaming/: advanced_networking.rs  audio.rs  capture.rs  compiler_optimization.rs  encoder.rs  error_recovery.rs  gpu_acceleration.rs  health_server.rs  lock_free.rs  memory_optimization.rs  ml_optimization.rs  mod.rs  moonlight.rs  optimization.rs  production_monitoring.rs  quantum_optimization.rs  rtp_optimization.rs  simd_ops.rs  sunshine.rs  zero_copy.rs
server/tests/: integration_test.rs  integration_tests.rs
server/tests/common/: mod.rs
src/dpstream_server/: error.rs.html  health.rs.html  lib.rs.html
switch-client/: Cargo.toml  Makefile
switch-client/src/: error.rs  lib.rs  main.rs
switch-client/src/display/: mod.rs
switch-client/src/input/: mod.rs
switch-client/src/moonlight/: audio.rs  decoder.rs  mod.rs
switch-client/src/network/: mod.rs
switch-client/src/sys/: libnx.rs  memory.rs  mod.rs  optimization.rs  time.rs
(+52 files in other folders)
