[package]
name = "dpstream-server"
version = "2025.1.1"
edition = "2021"
authors = ["Mario Cho <hephaex@gmail.com>"]
description = "Dolphin Remote Gaming Server"
license = "MIT"
repository = "https://github.com/hephaex/dpstream"

[dependencies]
# Async Runtime - optimized features
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time", "process", "signal", "fs", "net", "io-util"] }
async-trait = "0.1"

# Performance optimizations
parking_lot = "0.12"    # High-performance synchronization primitives
crossbeam = "0.8"       # Lock-free data structures
crossbeam-channel = "0.5"  # High-performance channels
crossbeam-utils = "0.8"  # Cache-aligned data structures
arc-swap = "1.6"        # Atomic Arc swapping
rayon = "1.8"           # Data parallelism
num_cpus = "1.16"       # CPU core detection
flume = "0.11"          # Ultra-fast MPSC channels (alternative to tokio channels)
dashmap = "6.0"         # Concurrent hashmap with better performance than Arc<Mutex<HashMap>>
smallvec = { version = "1.13", features = ["const_new", "union"] }  # Stack-allocated vectors

# Advanced optimizations for enterprise deployment
once_cell = "1.19"      # Lazy static initialization with better performance
arrayvec = "0.7"        # Stack-allocated arrays for known-size collections
ahash = "0.8"           # Faster hash algorithm than default
bumpalo = "3.14"        # Arena allocator for temporary allocations
mimalloc = { version = "0.1", default-features = false }  # High-performance allocator

# Network & Protocols - minimal feature sets
hyper = { version = "0.14", features = ["client", "server", "http1", "tcp"] }
tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots"] }
mdns-sd = { version = "0.11", optional = true }  # Service discovery
uuid = { version = "1.0", features = ["v4", "fast-rng", "serde"] }
socket2 = { version = "0.5", features = ["all"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
hostname = "0.4"                # System hostname

# TLS/Encryption - conditional compilation
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2.0", optional = true }
ring = { version = "0.17", optional = true }   # Cryptographic operations

# Multimedia Processing (optional for development)
gstreamer = { version = "0.23", optional = true }
gstreamer-app = { version = "0.23", optional = true }
gstreamer-video = { version = "0.23", optional = true }

# System Integration
nix = { version = "0.29", optional = true }
libc = "0.2"
x11 = { version = "2.21", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Environment
dotenv = "0.15"

# Date/Time handling
chrono = { version = "0.4", features = ["serde"] }

# Tailscale (placeholder - will need custom implementation)
# tailscale-rs = "0.1"

[features]
default = ["crypto", "discovery"]
full = ["gstreamer", "gstreamer-app", "gstreamer-video", "nix", "x11", "crypto", "discovery"]
crypto = ["ring", "rustls"]                      # Cryptographic features
streaming = ["gstreamer", "gstreamer-app", "gstreamer-video"]  # Media streaming
system = ["nix", "x11"]         # System integration
discovery = ["mdns-sd"]         # Service discovery
minimal = []                    # Minimal build for testing

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"

# Optimization profiles
[profile.release]
codegen-units = 1
lto = "fat"           # Enhanced LTO for maximum optimization
opt-level = 3
panic = "abort"
strip = true
overflow-checks = false  # Disable overflow checks in release
debug-assertions = false # Disable debug assertions
incremental = false      # Disable incremental for faster builds

# Profile for deployment with profiling data
[profile.release-with-debug]
inherits = "release"
debug = 2            # Full debug info for profiling
strip = false        # Keep symbols for profiling

[profile.dev]
opt-level = 1  # Slightly optimized for better dev experience

[profile.bench]
inherits = "release"
debug = true

[lib]
name = "dpstream_server"
path = "src/lib.rs"

[[bin]]
name = "dpstream-server"
path = "src/main.rs"