[package]
name = "dpstream-switch"
version = "1.0.0"
edition = "2021"
authors = ["Mario Cho <hephaex@gmail.com>"]
description = "Dolphin Remote Gaming Client for Nintendo Switch (Homebrew)"
license = "MIT"
repository = "https://github.com/hephaex/dpstream"

# Homebrew configuration
[lib]
name = "dpstream_switch"
crate-type = ["cdylib"]

# Main binary for NRO build
[[bin]]
name = "dpstream-switch"
path = "src/main.rs"

[dependencies]
# Core no-std support
no-std-compat = "0.4"
linked_list_allocator = "0.10"
spin = "0.9"
heapless = "0.8"              # Collections without allocation
nb = "1.1"                    # Non-blocking I/O

# Performance optimizations for Switch
cortex-m = "0.7"              # ARM Cortex-M utilities
atomic-polyfill = "1.0"       # Atomic operations on non-atomic platforms
cache-padded = "1.2"          # Cache-line optimization for Tegra X1
once_cell = { version = "1.19", default-features = false, features = ["race"] }
tinyvec = { version = "1.6", features = ["alloc", "rustc_1_57"] }  # Ultra-small vectors
critical-section = "1.1"      # Critical sections for interrupts

# Nintendo Switch Support (real implementations)
# Note: These would be uncommented in a real homebrew build environment
# libnx-rs = { git = "https://github.com/aarch64-switch-rs/libnx-rs" }
# nx = { git = "https://github.com/aarch64-switch-rs/nx" }

# Moonlight protocol support (no-std compatible)
bitflags = "2.4"

# Network (no-std compatible)
smoltcp = { version = "0.11", default-features = false, features = ["proto-ipv4"], optional = true }

# Error Handling (no-std)
# anyhow is not no-std compatible - using custom error types

# Serialization (no-std)
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.5"      # no-std JSON serialization
postcard = "1.0"             # Compact binary serialization

# Crypto (no-std)
aes = { version = "0.8", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
rand_core = "0.6"

[features]
default = ["crypto", "network"]
crypto = ["aes", "chacha20poly1305", "sha2"]
network = ["smoltcp"]
debug = []                    # Debug features for development

[profile.release]
lto = "fat"                  # Maximum link-time optimization
opt-level = "z"              # Optimize for size (critical for Switch)
codegen-units = 1
panic = "abort"
strip = true                 # Strip debug symbols
overflow-checks = false      # Disable overflow checks for performance
debug-assertions = false     # Disable debug assertions
incremental = false          # Better optimization without incremental
rpath = false                # Reduce binary size

# Optimized profile for development with better performance
[profile.dev-optimized]
inherits = "dev"
opt-level = 2                # More optimization for development
debug = 1                    # Limited debug info for smaller binaries

[profile.dev]
opt-level = 1               # Some optimization for faster dev builds
debug = true
strip = false

# Switch target configuration (Tegra X1 ARM64)
[target.aarch64-nintendo-switch-freestanding]
rustflags = [
    "-C", "target-cpu=cortex-a57",
    "-C", "target-feature=+neon",
    "-C", "relocation-model=pic",
    "-C", "link-arg=-pie"
]

# Development dependencies for PC testing
[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }